--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
 
 
-<script src="/manifest.107b0db75859c5173e58.js"></script>
+<script src="manifest.107b0db75859c5173e58.js"></script>
 
-<script src="/vendor.0aa7d3959f711cdb38ec.js"></script>
+<script src="vendor.0aa7d3959f711cdb38ec.js"></script>
 
-<script src="/style.3aaa4abf4d6095bb5c1e.js"></script>
+<script src="style.3aaa4abf4d6095bb5c1e.js"></script>
 
-<script src="/app.889b2dbc0ca7e45346c8.js"></script>
+<script src="app.889b2dbc0ca7e45346c8.js"></script>
 
 
 
