--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
   
 
   
+  <link href="/app.082ecd750cc7a6c6830e.css" rel="stylesheet">
+  
 
   
 
@@ -28,13 +30,13 @@
 
 
 
-<script src="manifest.107b0db75859c5173e58.js"></script>
+<script src="/manifest.002995347a01685d6f52.js"></script>
 
-<script src="vendor.0aa7d3959f711cdb38ec.js"></script>
+<script src="/vendor.9bbed6b62285258c0c18.js"></script>
 
-<script src="style.3aaa4abf4d6095bb5c1e.js"></script>
+<script src="/style.130f11dcba026c796a5a.js"></script>
 
-<script src="app.889b2dbc0ca7e45346c8.js"></script>
+<script src="/app.082ecd750cc7a6c6830e.js"></script>
 
 
 
