--- a/index.html
+++ b/index.html
@@ -6,41 +6,52 @@
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="" > <!--<![endif]-->
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KnowThyShelf</title>
 
   
   
-
-  
-  <link href="/app.082ecd750cc7a6c6830e.css" rel="stylesheet">
   
 
   
+    <link href="/app.dec0f6f1df303b934c35.css" rel="stylesheet">
+  
 
+  
 </head>
+
 <body>
+  
+  
+  <nav>
+    <div class='nav-elements'>
+      <a href="/">KNOWTHYSHELF</a>
+      <form action='/bookshelf' method='index'>
+        <input name='q' type='text' placeholder='Search for books'/>
+      </form>
+    </div>
+  </nav>
 
+  
+    <div id="app"></div>
+  
 
+  
 
-<div id="app"></div>
+  
 
+  
+    <script src="/manifest.1fff2556b0e75ddbf663.js"></script>
+  
+    <script src="/vendor.02c1f13ab4a54ac696d6.js"></script>
+  
+    <script src="/style.4a290834269714cc588e.js"></script>
+  
+    <script src="/app.dec0f6f1df303b934c35.js"></script>
+  
 
+  
 
-
-
-
-
-<script src="/manifest.002995347a01685d6f52.js"></script>
-
-<script src="/vendor.9bbed6b62285258c0c18.js"></script>
-
-<script src="/style.130f11dcba026c796a5a.js"></script>
-
-<script src="/app.082ecd750cc7a6c6830e.js"></script>
-
-
-
-
-
+  
 </body>
 </html>
